================================

Legend
------
* : fixed
! : changed
+ : added
- : removed

v1.2.0, 2025-02-??
-------------------
! update to ESM
! deps update
! config is not defaulted anymore, it must be either pointed with a param, or lay in the current dir, or be specified with args (destDir and sourceDir are mandatory)
+ [MAJOR] New text file format for the resulting artifact (as an diffable alternative to zip)
+ [MAJOR] Nodejs single executable, to be able to exec without node installation

v1.1.2, 2023-02-07
-------------------
* deps update
- remove snyk

v1.1.1, 2022-06-05
-------------------
* minor CI changes

v1.1.0, 2022-06-05
-------------------
! BREAKING: cut support of multiple include dirs, due to technical reasons. Please log an issue if you need this feature
! BREAKING: default eol is 'lf'
+ Create .meta/src_files with SHA1 of source files, to be compatible with abap version
+ watcher now watches include dirs as well
+ included files are listed in the output
+ skipFieldStartingWith config param, to control a fields-prefix to ignore
+ cleanDestDirOnStart config param
+ --no-zip command line param
+ better missing config handling
* multiple refactoring

v1.0.11, 2020-05-22
-------------------
! lowercase whole mock path (breaking!)
+ quiet operation param
+ ignore sheets starting from '-'
+ better exception handling: inform about file/sheet/cell/cell_value
* fix handling of empty date cells
* update deps

v1.0.10, 2020-03-21
------------------
* CI improvements and npm audit fixes

v1.0.9, 2019-03-19
------------------
* update packages

v1.0.8, 2019-10-14
------------------
+ support "_exclude" sheet to remove specific excel sheets from processing

v1.0.7, 2019-07-15
------------------
* minor refactorings

v1.0.6, 2019-03-26
------------------
+ support comments at the beginning of the excel sheet

v1.0.4, 2018-12-25
------------------
+ support files with no _contents

v1.0.1, 2018-10-12
------------------
+ working code deployed