@@ -17,10 +17,10 @@
 ☐ new mock file format
     ✔ force sorting @done(25-02-01 19:33)
     - utf8 only (or add binary format)
-    - mock checksums
+    - mock checksums? (but the bundle will usually contain .meta with checksums)
     - format validator?
 ☐ Make hashing not optional, remove timestamp (check ML compiler still works)
-☐ Rename zipPath and arg opts ?
+✔ Rename zipPath and arg opts ? @done(25-06-13 19:46)
 ☐ Release
     ☐ update readme
     ☐ bump version
