@@ -6,8 +6,8 @@ export const argOptions = [
     ['-s, --source <path>', 'source directory'],
     ['-d, --destination <path>', 'destination uncompressed dir'],
     ['-n, --clean-dest', 'clean dest dir on startup'],
-    ['-z, --zip-path <path>', 'path to zip file to build'],
-    ['-Z, --no-zip', 'suppress zip/bundle file (which may be enabled in config)'],
+    ['-z, --bundle-path <path>', 'path to zip/txt file to build'],
+    ['-Z, --no-bundle', 'suppress zip/txt file (which may be enabled in config)'],
     ['-i, --include <path>', 'path to include'],
     ['-e, --eol <eolchar>', 'end-of-line char: lf or crlf'],
     ['-m, --with-meta', 'calculate meta file (with source file hashes)'],
@@ -24,8 +24,8 @@ export function argsToConfig(args) {
     const config = {
         sourceDir: args.source,
         destDir:   args.destination,
-        bundlePath:  args.zipPath,
-        suppressZip: args.zip === false,
+        bundlePath: args.bundlePath,
+        noBundle:  args.bundle === false,
         includes:  args.include && [args.include],
         eol:       args.eol,
         quiet:     args.quiet,
