@@ -15,6 +15,7 @@ v1.2.0, 2025-02-??
 ! config is not defaulted anymore, it must be either pointed with a param, or lay in the current dir, or be specified with args (destDir and sourceDir are mandatory)
 + [MAJOR] New text file format for the resulting artifact (as an diffable alternative to zip)
 + [MAJOR] Nodejs single executable, to be able to exec without node installation
+! zipPath parameter changed to bundlePath
 
 v1.1.2, 2023-02-07
 -------------------
